test/success/system/_test_list_char.hs
space :: Char; space = ' '
res :: Bool
main = do
       let list :: [Char]
           list = "bye bye compiler"
           char :: Char
           char = list !! 3
       print list 

