test/fail/integration/_fail_grammar_value_list_1.hs
main = do
       let x :: [Int]; x = []
       print "hello"